z-index on range handle buggy, and not needed

--- a/writings/queue-illustrations.css
+++ b/writings/queue-illustrations.css
@@ -158,7 +158,6 @@ input[type="range"]::-webkit-slider-thumb {
     height: 1.5em;
     background: #333;
     position: relative;
-    z-index: 3;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
 }
 
